--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="comments__container">
         <ul class="comments__list">
-          <li class="comment__box">
+          <li class="comment">
             <div class="comment__box">
               <div class="comment__rate">
                 <button>
@@ -114,45 +114,37 @@
                       <div class="reply__content--header">
                         <div class="left">
                           <img
-                            src="./images/avatars/image-amyrobson.png"
+                            src="./images/avatars/image-juliusomo.png"
                             alt=""
                           />
-                          <span>amyrobson</span>
+                          <span>juliusomo</span>
                           <span>1 month ago</span>
                         </div>
-                        <button>
-                          <img src="./images/icon-reply.svg" alt="reply" />
-                          <span class="reply">Reply</span>
-                        </button>
+                        <div class="action">
+                          <button class="delete">
+                            <img src="./images/icon-delete.svg" alt="delete" />
+                            <span class="">delete</span>
+                          </button>
+                          <button class="edit">
+                            <img src="./images/icon-edit.svg" alt="edit" />
+                            <span class="">Edit</span>
+                          </button>
+                        </div>
                       </div>
                       <p class="reply__content--text">
-                        Impressive! Though it seems the drag feature could be
-                        improved. But overall it looks incredible. You've nailed
-                        the design and the responsiveness at various breakpoints
-                        works really well.
+                        <span class="tag-style">@amyrobson</span> Impressive!
+                        Though it seems the drag feature could be improved. But
+                        overall it looks incredible. You've nailed the design
+                        and the responsiveness at various breakpoints works
+                        really well.
                       </p>
                     </div>
                   </div>
                 </li>
               </ul>
-              <div class="reply__new">
-                <img
-                  src="./images/avatars/image-juliusomo.png"
-                  alt="juliusomo"
-                />
-                <textarea
-                  name="new-comment"
-                  id="text-comment"
-                  placeholder="Add a comment..."
-                  value="@amyrobson"
-                >
-@amyrobson </textarea
-                >
-                <button type="submit">Send</button>
-              </div>
             </div>
           </li>
-          <li class="comment__box">
+          <li class="comment">
             <div class="comment__box">
               <div class="comment__rate">
                 <button>
@@ -183,8 +175,25 @@
                 </p>
               </div>
             </div>
+            <div class="reply__container">
+              <div class="reply__new">
+                <img
+                  src="./images/avatars/image-juliusomo.png"
+                  alt="juliusomo"
+                />
+                <textarea
+                  name="new-comment"
+                  id="text-comment"
+                  placeholder="Add a comment..."
+                  value="@amyrobson"
+                >
+@amyrobson </textarea
+                >
+                <button type="submit">Send</button>
+              </div>
+            </div>
           </li>
-          <li class="comment__box">
+          <li class="comment">
             <div class="comment__box">
               <div class="comment__rate">
                 <button>
@@ -232,6 +241,22 @@
         </div>
       </div>
     </div>
+
+    <div class="popupAction">
+      <div class="overlay"></div>
+      <div class="popup">
+        <h3>Delete Comment</h3>
+        <p>
+          Are you sure you want to delete this comment? This will remove the
+          comment and can't be undone.
+        </p>
+        <div class="yes-no">
+          <button class="no__btn btn">No,Cancel</button>
+          <button class="yes__btn btn">Yes, Delete</button>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <div class="attribution">
       Challenge by
