--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
-    <script src="./js/app.js" defer></script>
+    <script src="./js/app.js" type="module" defer></script>
   </head>
   <body>
     <div class="container">
@@ -52,7 +52,7 @@
                     <span>amyrobson</span>
                     <span>1 month ago</span>
                   </div>
-                  <button>
+                  <button class="reply-comment">
                     <img src="./images/icon-reply.svg" alt="reply" />
                     <span class="reply">Reply</span>
                   </button>
@@ -84,7 +84,7 @@
                     <span>amyrobson</span>
                     <span>1 month ago</span>
                   </div>
-                  <button>
+                  <button class="reply-comment">
                     <img src="./images/icon-reply.svg" alt="reply" />
                     <span class="reply">Reply</span>
                   </button>
@@ -162,7 +162,7 @@
                     <span>amyrobson</span>
                     <span>1 month ago</span>
                   </div>
-                  <button>
+                  <button class="reply-comment">
                     <img src="./images/icon-reply.svg" alt="reply" />
                     <span class="reply">Reply</span>
                   </button>
@@ -211,7 +211,7 @@
                     <span>amyrobson</span>
                     <span>1 month ago</span>
                   </div>
-                  <button>
+                  <button class="reply-comment">
                     <img src="./images/icon-reply.svg" alt="reply" />
                     <span class="reply">Reply</span>
                   </button>
